# DR_CursorTracker

./: CMakeLists.txt  README.md  dr_cursor_tracker.c  dr_cursor_tracker.h  obs-module.rc.in
cmake/windows/: obs-module.rc.in
data/locale/: en-US.ini  ja-JP.ini  zh-TW.ini
docs/: README.md  README_EN.md  README_JP.md  SETTINGS_GUIDE_EN.md  SETTINGS_GUIDE_JP.md  SETTINGS_GUIDE_TW.md
